--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,29 +1,29 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/postgres
 {
-    "name": "Terraform",
-    "dockerComposeFile": "docker-compose.yml",
-    "service": "terraform",
+    "name": "Dev container with all the dependencies installedss",
+  
+    // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+    "image": "mcr.microsoft.com/devcontainers/javascript-node:0-18",
+  
+    // Features to add to the dev container. More info: https://containers.dev/features.
+    // "features": {},
+  
     "customizations": {
-        "vscode": {
-            // Set *default* container specific settings.json values on container create.
-            "settings": {
-                "editor.formatOnPaste": false, // required
-                "editor.formatOnType": false, // required
-                "editor.formatOnSave": true, // optional
-                "editor.formatOnSaveMode": "file", // required to format on save
-                "files.autoSave": "off" // optional but recommended
-            },
-            // Add the IDs of extensions you want installed when the container is created.
-            "extensions": [
-                "ms-azuretools.vscode-docker",
-                "4ops.terraform",
-                "hashicorp.terraform",
-                "discretegames.f5anything"
-            ]
-        }
+      "vscode": {
+        "settings": {},
+        "extensions": ["streetsidesoftware.code-spell-checker"]
+      }
     },
-    // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-    "remoteUser": "root",
-    "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}"
-}
+  
+    // "forwardPorts": [3000],
+  
+    "portsAttributes": {
+      "3000": {
+        "label": "Hello Remote World",
+        "onAutoForward": "notify"
+      }
+    },
+  
+    "postCreateCommand": "yarn install"
+  
+    // "remoteUser": "root"
+  }
