--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,13 +1,26 @@
 {
     "name": "Dev container with all the dependencies installed",
     
+
+    // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+    // "remoteUser": "root"
+    "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
+
     // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
     //"image": "mcr.microsoft.com/devcontainers/python:3",
     "dockerComposeFile": "docker-compose.yml",
-    "service": "remote",
+    "service": "default",
   
     // Features to add to the dev container. More info: https://containers.dev/features.
-    // "features": {},
+    "features": {
+      //"ghcr.io/devcontainers/features/docker-in-docker:2": {},
+      "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {},
+      "ghcr.io/mpriscella/features/kind:1": {},
+      "ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {},
+      "ghcr.io/devcontainers/features/terraform:1": {},
+      "ghcr.io/devcontainers/features/aws-cli:1": {},
+      "ghcr.io/devcontainers/features/azure-cli:1": {}
+    },
   
     "customizations": {
       "vscode": {
@@ -21,6 +34,7 @@
         ]
       }
     },
+
   
     // "forwardPorts": [3000],
     // "portsAttributes": {
@@ -30,7 +44,5 @@
     //   }
     // },
   
-    "postCreateCommand": "ls -la ./"
-  
-    // "remoteUser": "root"
+    "postCreateCommand": "ls -la ./"  
   }
