--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -5,6 +5,6 @@ version: 3
 dotenv: [".env"]
 silent: true # <-- Less verbose
 includes:
-  sample: { optional: true, taskfile: ./sample/ }
+  sample: { optional: true, taskfile: ./sample/, dir: ./sample/ }
 tasks:
   clean: git clean -fdX
